--- a/AuroraRDSLambda/java_template/src/main/resources/db.properties
+++ b/AuroraRDSLambda/java_template/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #
 #Thu Nov 01 00:00:00 PDT 2020
 password=admin1234
-url=jdbc:mysql://tcss562-termprojectdatabase.cluster-cmbjmx1bh8xd.us-east-2.rds.amazonaws.com:3306/TEST
+url=jdbc:mysql://tcss562-termprojectdatabase.cluster-cmbjmx1bh8xd.us-east-2.rds.amazonaws.com:3306
 driver=com.mysql.cj.jdbc.Driver
 username=admin
