--- a/service3/saaf_sqlite3_query/pom.xml
+++ b/service3/saaf_sqlite3_query/pom.xml
@@ -7,6 +7,19 @@
     <packaging>jar</packaging>
     <name>java_template</name>
     <dependencies>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+
+        </dependency>
+
+        <dependency> 
+          <groupId>com.amazonaws</groupId> 
+          <artifactId>aws-java-sdk-s3</artifactId> 
+          <version>1.12.332</version>
+        </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
