--- a/service3/saaf_aurora_rds_query/pom.xml
+++ b/service3/saaf_aurora_rds_query/pom.xml
@@ -7,21 +7,37 @@
     <packaging>jar</packaging>
     <name>java_template</name>
     <dependencies>
+
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
             <version>1.1.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.22</version>
         </dependency>
+
+        <dependency>
+          <groupId>com.amazonaws</groupId> 
+          <artifactId>aws-java-sdk-sqs</artifactId> 
+          <version>1.12.599</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
