update async aurora services

--- a/service3/async_aurora_rds_query/pom.xml
+++ b/service3/async_aurora_rds_query/pom.xml
@@ -7,7 +7,11 @@
     <packaging>jar</packaging>
     <name>java_template</name>
     <dependencies>
-
+        <dependency> 
+          <groupId>com.amazonaws</groupId> 
+          <artifactId>aws-java-sdk-s3</artifactId> 
+          <version>1.12.332</version>
+        </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
